[workspace]
members = [
  "crates/nanocl_stubs",
  "crates/nanocl_utils",
  "crates/nanocld_client",
  "bin/ncdproxy",
  "bin/ncddns",
  "bin/nanocld",
  "bin/nanocl",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[patch.crates-io]
nanocl_stubs = { path = "crates/nanocl_stubs" }
nanocl_utils = { path = "crates/nanocl_utils" }
nanocld_client = { path = "crates/nanocld_client" }
# ntex-cors = { git = "https://github.com/ntex-rs/ntex-extras.git" }
#ntex-files = { git = "https://github.com/leon3s/ntex-extras", branch = "upgrade-ntex-version" }
#ntex-multipart = { git = "https://github.com/leon3s/ntex-extras" }
#bollard-next = { path = "../bollard" }
#ntex = { git = "https://github.com/ntex-rs/ntex" }
#ntex-tokio = { git = "https://github.com/ntex-rs/ntex" }
