[workspace]
resolver = "2"
members = [
  "crates/nanocl_error",
  "crates/nanocl_stubs",
  "crates/nanocl_utils",
  "crates/nanocld_client",
  "bin/ncproxy",
  "bin/ncdns",
  "bin/ncvpnkit",
  "bin/nanocld",
  "bin/nanocl",
]

[profile.dev]
opt-level = 0

[profile.release]
strip = true
# Todo test settings for release (segfault on macosx)
# opt-level = "z"
# lto = true
# codegen-units = 1

[patch.crates-io]
nanocl_error = { path = "crates/nanocl_error" }
nanocl_stubs = { path = "crates/nanocl_stubs" }
nanocl_utils = { path = "crates/nanocl_utils" }
nanocld_client = { path = "crates/nanocld_client" }
