[package]
name = "nanocl-models"
version = "0.0.1"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl shared models"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
repository = "https://github.com/nxthat/nanocl"

[dependencies]
bollard = "0.13.0"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde"] }
