[package]
name = "nanocl-models"
version = "0.0.1"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl shared models"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
repository = "https://github.com/nxthat/nanocl"

[features]
serde = ["dep:serde", "uuid/serde"]
diesel = ["dep:diesel", "dep:diesel-derive-enum"]

[dependencies]
bollard = "0.14"
uuid = { version = "1.2.2" }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = "1.0.91"
diesel = { version = "2.0.1", optional = true }
diesel-derive-enum = { version = "2.0.0-rc.0", optional = true }
