[package]
name = "nanocl_client"
version = "0.0.1"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl http client"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
repository = "https://github.com/nxthat/nanocl"

[features]
tokio = ["ntex/tokio"]
glommio = ["ntex/glommio"]
async-std = ["ntex/async-std"]

[dependencies]
bollard = "0.14"
futures = "0.3.26"
nanocl_models = { version = "0.0.1", features = ["serde"] }
ntex = { version = "0.6.1" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
thiserror = "1.0.38"
