[package]
name = "nanocl_error"
version = "0.3.0"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl error types"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://next-hat.com/nanocl"
repository = "https://github.com/next-hat/nanocl"

[lib]
bench = false

[features]
io = []
ntex = ["dep:ntex"]
http = ["ntex", "dep:serde_json"]
http_client = ["io", "http", "serde_urlencoded"]
diesel = ["dep:diesel"]
bollard = ["dep:bollard-next"]
serde_json = ["dep:serde_json"]
serde_yaml = ["dep:serde_yaml"]
serde_urlencoded = ["dep:serde_urlencoded"]
tokio = ["dep:tokio"]

[dependencies]
ntex = { version = "1.2", optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
diesel = { version = "2.1", default-features = false, optional = true }
bollard-next = { version = "0.16.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
tokio = { version = "1.36", default-features = false, optional = true }
