[package]
name = "nanocl_stubs"
version = "0.11.0"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl shared data model"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
repository = "https://github.com/nxthat/nanocl"

[lib]
bench = false

[features]
default = ["serde"]
serde = ["dep:serde", "uuid/serde", "chrono/serde"]
utoipa = ["dep:utoipa"]
test = []

[dependencies]
bollard-next = { version = "0.15.4" }
uuid = { version = "1.4.1" }
serde_json = "1.0.108"
chrono = { version = "0.4.31", default-features = false, features = [
  "std",
  "clock",
] }
serde = { version = "1.0.191", features = ["derive"], optional = true }
utoipa = { version = "4", features = ["uuid", "chrono"], optional = true }
