[package]
name = "nanocl_stubs"
version = "0.12.0"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl shared data model"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://next-hat.com/nanocl"
repository = "https://github.com/nxthat/nanocl"

[lib]
bench = false

[features]
default = ["serde"]
serde = ["dep:serde", "uuid/serde", "chrono/serde"]
utoipa = ["dep:utoipa"]
test = []

[dependencies]
uuid = { version = "1.6.1" }
serde_json = "1.0.108"
bollard-next = { version = "0.15.4" }
chrono = { version = "0.4.31", default-features = false, features = [
  "std",
  "clock",
] }
serde = { version = "1.0.192", features = ["derive"], optional = true }
utoipa = { version = "4", features = ["uuid", "chrono"], optional = true }
