[package]
name = "nanocl_stubs"
version = "0.16.0"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl shared data model"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://next-hat.com/nanocl"
repository = "https://github.com/next-hat/nanocl"

[lib]
bench = false

[features]
default = ["serde"]
serde = ["dep:serde", "uuid/serde", "chrono/serde"]
utoipa = ["dep:utoipa"]
schemars = ["dep:schemars", "bollard-next/schemars"]
clap = ["dep:clap"]
test = []

[dependencies]
uuid = { version = "1.9" }
serde_json = "1.0"
bollard-next = { version = "0.16.1" }
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
utoipa = { version = "4", features = ["uuid", "chrono"], optional = true }
schemars = { version = "0.8", features = ["uuid1", "chrono"], optional = true }
clap = { version = "4.5", features = ["derive", "cargo"], optional = true }
ipnet = { version = "2.10.1", features = ["serde"] }
