[package]
name = "nanocl_utils"
version = "0.3.1"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "Nanocl shared utils"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://next-hat.com/nanocl"
repository = "https://github.com/nxthat/nanocl"

[lib]
bench = false

[features]
dev = []
logger = ["dep:log", "dep:env_logger"]
ntex = ["dep:ntex", "dep:futures", "dep:serde_json"]
ntex_swagger = [
  "ntex",
  "dep:utoipa",
  "dep:utoipa-swagger-ui",
  "nanocl_error/http",
]
unix = ["dep:libc", "nanocl_error/io"]
versioning = []
test = []
build_tools = ["dep:clap", "dep:clap_mangen"]
ntex_test_client = ["dep:ntex", "dep:serde"]

[dependencies]
ntex = { version = "0.7.14", optional = true }
log = { version = "0.4.20", optional = true }
env_logger = { version = "0.10.1", optional = true }
serde = { version = "1.0.192", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
futures = { version = "0.3.25", optional = true }
utoipa = { version = "4.1", features = ["yaml"], optional = true }
utoipa-swagger-ui = { version = "5.0", optional = true }
libc = { version = "0.2.139", optional = true }
clap = { version = "4.4.11", features = ["derive", "cargo"], optional = true }
clap_mangen = { version = "0.2", optional = true }
nanocl_error = { version = "0.1.1", optional = true }
