[package]
name = "nanocld_client"
version = "0.9.1"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "The Nanocl daemon api client"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.next-hat.com/docs/guides/nanocl"
repository = "https://github.com/nxthat/nanocl"

[lib]
bench = false

[features]
default = ["tokio"]
tokio = ["ntex/tokio"]
glommio = ["ntex/glommio"]
async-std = ["ntex/async-std"]
utoipa = ["nanocl_stubs/utoipa"]

[dev-dependencies]
tokio-util = "0.7.7"
tokio = { version = "1.32.0", features = ["fs"] }

[dependencies]
futures = "0.3.25"
serde_json = "1.0.104"
ntex = { version = "0.7.3", features = ["openssl"] }
serde = { version = "1.0.183", features = ["derive"] }
bollard-next = { version = "0.15.0" }
nanocl_stubs = { version = "0.9.1", features = ["serde"] }
nanocl_utils = { version = "0.2.1", features = [
  "io_error",
  "http_client_error",
] }
openssl = { version = "0.10.56", features = ["vendored"] }
