[package]
name = "nanocld_client"
version = "0.12.0"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "The Nanocl daemon api client"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://next-hat.com/nanocl"
repository = "https://github.com/nxthat/nanocl"

[lib]
bench = false

[features]
default = ["tokio"]
tokio = ["ntex/tokio"]
glommio = ["ntex/glommio"]
async-std = ["ntex/async-std"]
utoipa = ["nanocl_stubs/utoipa"]

[dev-dependencies]
tokio-util = "0.7.9"
tokio = { version = "1.34.0", features = ["fs"] }

[dependencies]
futures = "0.3.25"
serde_json = "1.0.108"
ntex = { version = "0.7.16" }
serde = { version = "1.0.192", features = ["derive"] }
bollard-next = { version = "0.15.4" }
nanocl_stubs = { version = "0.12.0", features = ["serde"] }
nanocl_error = { version = "0.1.1", features = ["io", "http_client"] }
