[package]
name = "nanocld_client"
version = "0.14.0"
edition = "2021"
authors = ["nanocl contributors <team@next-hat.com>"]
description = "The Nanocl daemon api client"
readme = "readme.md"
license = "MIT OR Apache-2.0"
homepage = "https://next-hat.com/nanocl"
repository = "https://github.com/next-hat/nanocl"

[lib]
bench = false

[features]
default = ["tokio"]
tokio = ["ntex/tokio"]
glommio = ["ntex/glommio"]
async-std = ["ntex/async-std"]
utoipa = ["nanocl_stubs/utoipa"]
openssl = ["dep:openssl"]

[dev-dependencies]
tokio-util = "0.7"
tokio = { version = "1.36", features = ["fs"] }

[dependencies]
futures = "0.3"
serde_json = "1.0"
ntex = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
bollard-next = { version = "0.16.1" }
nanocl_stubs = { version = "0.14", features = ["serde"] }
nanocl_error = { version = "0.3", features = ["io", "http_client"] }
openssl = { version = "0.10", optional = true }
